source/tests/errors/old/for_loop_step_zero.apex
for i = 0, 10, 0
    x = 1